# wlan-cloud-ucentralfms

./: .gitignore  BUILDING.md  CLI.md  CMakeLists.txt  CONFIGURATION.md  Dockerfile  LICENSE  README.md  apikeys.db  docker-entrypoint.sh  owfms.properties  owfms.properties.tmpl  owfms.service  readiness_check  run.sh  set_env.sh  stop.sh  ucentralfms.properties  ucentralfms.properties.aws  ucentralfms.properties.priv  ucentralfms.properties.tmpl  ucentralfms.service  ucentralfws.properties  vcpkg.json  wait-for-postgres.sh
.github/workflows/: ci.yml  cleanup.yml  openapi-pages.yml  release.yml
docs/: index.html
helm/: .gitignore  Chart.yaml  README.md  values.yaml
helm/templates/: _config.tpl  _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secret-certs.yaml  secret-config.yaml  secret-env.yaml  secret-regcred.yaml  service.yaml
openapi/: apikey.db  owfms.yaml  ucentralfws.yaml
overlays/curl/: vcpkg.json
overlays/openssl/: vcpkg.json
overlays/zlib/: vcpkg.json
src/: ALBHealthCheckServer.h  APIServers.cpp  AuthService.cpp  AuthService.h  AutoUpdater.cpp  AutoUpdater.h  AwsNLBHealthCheck.cpp  Daemon.cpp  Daemon.h  Dashboard.cpp  Dashboard.h  DeviceCache.cpp  DeviceCache.h  FWManager.cpp  FWManager.h  FirmwareCache.cpp  FirmwareCache.h  FirmwareDS.cpp  FirmwareDS.h  GW_SDK.h  KafkaNotifier.cpp  KafkaNotifier.h  LatestFirmwareCache.cpp  LatestFirmwareCache.h  ManifestCreator.cpp  ManifestCreator.h  MicroService.cpp  MicroService.h  NewCommandHandler.cpp  NewCommandHandler.h  NewConnectionHandler.cpp  NewConnectionHandler.h  NotificationMgr.cpp  NotificationMgr.h  OpenAPIRequest.cpp  Prov_SDK.cpp  Prov_SDK.h  RESTAPI_FMSObjects.cpp  RESTAPI_FMSObjects.h  RESTAPI_GWobjects.cpp  (+78 more)
src/RESTAPI/: RESTAPI_FMSObjects.cpp  RESTAPI_GWobjects.cpp  RESTAPI_InternalServer.cpp  RESTAPI_InternalServer.h  RESTAPI_Routers.cpp  RESTAPI_connectedDeviceHandler.cpp  RESTAPI_connectedDeviceHandler.h  RESTAPI_connectedDevicesHandler.cpp  RESTAPI_connectedDevicesHandler.h  RESTAPI_deviceInformation_handler.cpp  RESTAPI_deviceInformation_handler.h  RESTAPI_deviceReportHandler.cpp  RESTAPI_deviceReportHandler.h  RESTAPI_firmwareAgeHandler.cpp  RESTAPI_firmwareAgeHandler.h  RESTAPI_firmwareHandler.cpp  RESTAPI_firmwareHandler.h  RESTAPI_firmwaresHandler.cpp  RESTAPI_firmwaresHandler.h  RESTAPI_historyHandler.cpp  RESTAPI_historyHandler.h  RESTAPI_server.cpp  RESTAPI_server.h
src/RESTObjects/: RESTAPI_FMSObjects.cpp  RESTAPI_FMSObjects.h
src/SDK/: GW_SDK.cpp  GW_SDK.h  Prov_SDK.cpp  Prov_SDK.h
src/framework/: MicroService.cpp  MicroService.h  OpenAPIRequest.cpp  RESTAPI_handler.h  RESTAPI_system_command.cpp  RESTAPI_utils.h  StorageClass.h  ow_constants.h
src/storage/: orm_deviceInfo.cpp  orm_deviceInfo.h  orm_firmwares.cpp  orm_firmwares.h  orm_history.cpp  orm_history.h  storage_deviceInfo.cpp  storage_deviceTypes.cpp  storage_deviceTypes.h  storage_firmwares.cpp  storage_firmwares.h  storage_history.cpp  storage_history.h  storage_tables.cpp
test_scripts/: latest.json  t1.sh
test_scripts/curl/: cli  result.json
